[package]
name = "hello_world"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.72"
publish = false


[dependencies]
# For buttplug support
buttplug = "7.0.0"
futures = "0.3.25"
anyhow = "1.0.68"
tracing-subscriber = "0.3.16"

# Because buttplug needs Async stuff, specifically Tokio
tokio = { version = "1.23.0", features = ["full"] }

eframe = "0.26.2"
# For image support:
egui_extras = {version = "0.26.2", features = ["default", "image"] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
